--- a/03/03.img-1.html
+++ b/03/03.img-1.html
@@ -3,8 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<style type="text/css">
+h2{
+	color : red;
+}
+</style>
 </head>
 <body>
-
+	<h2>Lion King</h2>
+	<img src="../../images/lion.jpg" alt="사자">
 </body>
 </html>
